@@ -28,6 +28,27 @@ CAMLextern void caml_expand_command_line (int *, char ***);
 
 int main(int argc, char **argv)
 {
+#ifdef DEBUG
+  {
+    char *ocp;
+    char *cp;
+    int i;
+
+    caml_gc_message (-1, "### OCaml runtime: debug mode ###\n", 0);
+#if 0
+    caml_gc_message (-1, "### command line:", 0);
+    for (i = 0; i < argc; i++){
+      caml_gc_message (-1, " %s", argv[i]);
+    }
+    caml_gc_message (-1, "\n", 0);
+    ocp = getenv ("OCAMLRUNPARAM");
+    caml_gc_message (-1, "### OCAMLRUNPARAM=%s\n", ocp == NULL ? "" : ocp);
+    cp = getenv ("CAMLRUNPARAM");
+    caml_gc_message (-1, "### CAMLRUNPARAM=%s\n", cp == NULL ? "" : cp);
+    caml_gc_message (-1, "### working dir: %s\n", getcwd (NULL, 0));
+#endif
+  }
+#endif
 #ifdef _WIN32
   /* Expand wildcards and diversions in command line */
   caml_expand_command_line(&argc, &argv);
